fix spacing on statistics_page

--- a/www/css/new-ui/pages/_statistics.css
+++ b/www/css/new-ui/pages/_statistics.css
@@ -24,3 +24,7 @@
 .statistics_page .blank_row {
     display: none;
 }
+
+.statistics_page h3 {
+    padding-top: 1.2em !important;
+}
